Fix overflow for main and page navigation
The overflow and superfish control for the main and page navigation
menus was not correctly calculating the available size.  This
commit updates the available size to consider the other elements
sharing the space.

--- a/share/static/css/elevator-light/layout.css
+++ b/share/static/css/elevator-light/layout.css
@@ -141,13 +141,18 @@ div#header {
 div#header h1 {
     position: absolute;
     left: 2em;
-    right: 20em;
     top: 0.5em;
     height: 1.4em;
     font-size: 1.4em;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+@media (max-width: 1060px) {
+    div#header h1 {
+        right: 13%;
+    }
 }
 
 h1 {
